--- a/ad-platform/ad-platform/pom.xml
+++ b/ad-platform/ad-platform/pom.xml
@@ -52,6 +52,16 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>8.0.33</version>
       </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>2.0.9</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <version>2.23.1</version>
+      </dependency>
   </dependencies>
 
   <build>
