--- a/ad-platform/ad-platform/pom.xml
+++ b/ad-platform/ad-platform/pom.xml
@@ -62,6 +62,11 @@
           <artifactId>log4j-slf4j2-impl</artifactId>
           <version>2.23.1</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.10.1</version>
+      </dependency>
   </dependencies>
 
   <build>
