--- a/ad-platform/ad-platform/src/main/webapp/WEB-INF/web.xml
+++ b/ad-platform/ad-platform/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+
+    <display-name>Ad Platform</display-name>
+
+    <welcome-file-list>
+        <welcome-file>admin/login.jsp</welcome-file>
+    </welcome-file-list>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/admin/login.jsp</location>
+    </error-page>
 </web-app>
