--- a/ad-platform/ad-platform/src/main/webapp/WEB-INF/web.xml
+++ b/ad-platform/ad-platform/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,19 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
-    <display-name>Ad Platform</display-name>
+    <!-- 静态资源配置 -->
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/static/*</url-pattern>
+    </servlet-mapping>
 
+    <!-- 欢迎页面 -->
     <welcome-file-list>
-        <welcome-file>admin/login.jsp</welcome-file>
+        <welcome-file>login</welcome-file>  <!-- 指向Servlet的URL -->
     </welcome-file-list>
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/WEB-INF/admin/login.jsp</location>
-    </error-page>
+    <!-- Session超时30分钟 -->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
