--- a/NewsSite/News/src/main/resources/db.properties
+++ b/NewsSite/News/src/main/resources/db.properties
@@ -1,4 +1,3 @@
-jdbc.url=jdbc:mysql://10.100.164.16:3306/newssite_db?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=Mysql@2025
-jdbc.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://10.100.164.16:3306/newssite_db?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&characterEncoding=utf-8
+db.username=root
+db.password=Mysql@2025
