--- a/Shop/shop/pom.xml
+++ b/Shop/shop/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <!-- MySQL Connector -->
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
